--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ flask = "==1.1.2"
 flask-cors = "==3.0.8"
 pyserial = "==3.4"
 flask-restful = "==0.3.8"
+gunicorn = "==20.0.4"
 
 [requires]
 python_version = "3.8"
