--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask-cors = "==3.0.8"
 pyserial = "==3.4"
 flask-restful = "==0.3.8"
 gunicorn = "==20.0.4"
+pyyaml = "==5.3.1"
 
 [requires]
 python_version = "3.8"
