--- a/application-desktop-development.yml
+++ b/application-desktop-development.yml
@@ -1,7 +1,7 @@
 ventilator:
   name: Local-Dev-Ventilator-1
   connection:
-    type: serial
-    link: /dev/ttyS4
+    type: random
+    link: COM4
     baud: 9600
     timeout: 1
