--- a/Pipfile
+++ b/Pipfile
@@ -12,4 +12,5 @@ pyserial = "==3.4"
 flask-restful = "==0.3.8"
 gunicorn = "==20.0.4"
 pyyaml = "==5.3.1"
-
+websockets = "==8.1"
+asyncio = "==3.4.3"
