Added hopefully working alarm code

--- a/application-development.yml
+++ b/application-development.yml
@@ -5,6 +5,8 @@ ventilator:
     link: /dev/ttyACM0
     baud: 9600
     timeout: 1
+  alarm:
+    pin: -1
   device:
     id: 85c66b7e-c6f5-4304-a0d8-f1ecdc7f6dc5
     roles:
