--- a/application-production.yml
+++ b/application-production.yml
@@ -1,5 +1,6 @@
 ventilator:
   name: Ventilator-1
+  authorization: d766d78e-5097-47da-9e0c-83da20a3e79e
   connection:
     type: serial
     link: /dev/ttyACM0
